; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/blacklist/bin/extr_conf.c_conf_namemask.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/blacklist/bin/extr_conf.c_conf_namemask.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.conf = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*, i64, %struct.conf*)* @conf_namemask to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @conf_namemask(i8* %0, i64 %1, %struct.conf* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca %struct.conf*, align 8
  store i8* %0, i8** %4, align 8
  store i64 %1, i64* %5, align 8
  store %struct.conf* %2, %struct.conf** %6, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = load %struct.conf*, %struct.conf** %6, align 8
  %9 = getelementptr inbounds %struct.conf, %struct.conf* %8, i32 0, i32 2
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @fmtname(i32 %10)
  %12 = load i64, i64* %5, align 8
  %13 = call i32 @strlcpy(i8* %7, i32 %11, i64 %12)
  %14 = load i8*, i8** %4, align 8
  %15 = load i64, i64* %5, align 8
  %16 = load %struct.conf*, %struct.conf** %6, align 8
  %17 = getelementptr inbounds %struct.conf, %struct.conf* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 4
  %19 = load %struct.conf*, %struct.conf** %6, align 8
  %20 = getelementptr inbounds %struct.conf, %struct.conf* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @fmtmask(i8* %14, i64 %15, i32 %18, i32 %21)
  %23 = load i8*, i8** %4, align 8
  ret i8* %23
}

declare dso_local i32 @strlcpy(i8*, i32, i64) #1

declare dso_local i32 @fmtname(i32) #1

declare dso_local i32 @fmtmask(i8*, i64, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
